[tool.poetry]
name = "langchain-movie-recommender"
version = "0.1.0"
description = "Movie recommendation system using LangChain and LangGraph"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-core = "^0.1.8"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
jinja2 = "^3.1.2"
pydantic = "^2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
